app/user13/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: user13-spring-petclinic
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: user13-spring-petclinic
    app.kubernetes.io/name: user13-spring-petclinic
    app.kubernetes.io/part-of: user13-spring-petclinic
    app.openshift.io/runtime: java
  name: user13-spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user13-spring-petclinic
  template:
    metadata:
      labels:
        app: user13-spring-petclinic
    spec:
      containers:
      - name: user13-spring-petclinic
        imagePullPolicy: Always
        image: quay.io/siamaksade/spring-petclinic:latest
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 45
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
